syntax = "proto3";
package info;
option go_package = "./pb";

message GetObjInfoReq{
    int64 user_id=1;
    int32 obj_type=2; // 0:问题 1:回答 2:文章
}
message GetObjInfoRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
    Data data=4;
    message Data{
        repeated int64 ids=1;
    }
}

message GetPersonalInfoReq{
    int64 user_id=1;
}
message GetPersonalInfoRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
    Data data=4;
    message Data{
        string username=1;
        string nickname=2;
        string email=3;
        string phone=4;
        int32 vip=5;
    }
}

message GetCollectionInfoReq{
    int64 user_id=1;
}
message GetCollectionInfoRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
    Data data=4;
    message Data{
        repeated int32 obj_type=1; // 0:回答 1:文章
        repeated int64 obj_id=2;
    }
}

message GetNotificationInfoReq{
    int64 user_id=1;
    int32 message_type=2;
}
message GetNotificationInfoRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
    Data data=4;
    message Data{
        repeated int64 message_id=1;
    }
}

message GetSubscriptionInfoReq{
    int64 user_id=1;
    int32 obj_type=2;
}
message GetSubscriptionInfoRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
    Data data=4;
    message Data{
        repeated int64 ids=1;
    }
}

service Info{
    rpc GetObjInfo(GetObjInfoReq) returns(GetObjInfoRes);
    rpc GetPersonalInfo(GetPersonalInfoReq) returns(GetPersonalInfoRes);
    rpc GetCollectionInfo(GetCollectionInfoReq) returns(GetCollectionInfoRes);
    rpc GetNotificationInfo(GetNotificationInfoReq) returns(GetNotificationInfoRes);
    rpc GetSubscriptionInfo(GetSubscriptionInfoReq) returns(GetSubscriptionInfoRes);
}